<resources>
    <string name="app_name">DemoProject</string>

    <string name="phones">Phone - </string>
    <string name="dob">DOB - </string>
    <string name="age">Age - </string>
    <string name="email">Email - </string>
    <string name="address">Address - </string>
    <string name="postcode">Postcode - </string>
    <string name="user_name">User Name</string>
    <string name="city_country">City, Country</string>
    <string name="all">All</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
</resources>